--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
+# required to serve the model
+flask
+gevent
+gunicorn
+
+# dependencies for the custom model
+detoxify
+
+# eda
 antlr4-python3-runtime==4.8
 attrs==20.3.0
 bravado==11.0.3
