--- a/hateless-plugin/package.json
+++ b/hateless-plugin/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "npm run build && electron ./dist/main.js"
+    "start": "npm run build && electron main.js"
   },
   "author": "",
   "license": "ISC",
