Added working backend

--- a/model/nginx.conf
+++ b/model/nginx.conf
@@ -1,7 +1,6 @@
 worker_processes 1;
 daemon off; # Prevent forking
 
-
 pid /tmp/nginx.pid;
 error_log /var/log/nginx/error.log;
 
@@ -19,12 +18,20 @@ http {
   }
 
   server {
+    ##
+    # Proxy settings
+    ##
+
+    proxy_connect_timeout 1000;
+    proxy_send_timeout 1000;
+    proxy_read_timeout 1000;
+    send_timeout 1000;
     listen 8080 deferred;
-    client_max_body_size 5m;
+    client_max_body_size 5M;
+    keepalive_timeout 30;
+    
 
-    keepalive_timeout 5;
-
-    location ~ ^/(ping|ishate|whyhate) {
+    location ~ ^/(whyhate|ishate|ping) {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
       proxy_redirect off;
